Trained, Saved, and Evaluated the GiMaTag CNN, ResNet50, and VGG19 models
[1] Evaluated the parameters and accuracy and loss gaps for each of the model's epochs
[2] Saved the best models per model type (e.g., GiMaTag CNN, ResNet50, and VGG19) as a .pt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-tensorflow
+# For handling paths
+pathlib
+
+# For data augmentation
 opencv-python
 numpy
 pandas
+
+# For training the models
+tensorflow
+torch
+torchvision
+torchaudio
+
+# For evaluating the models
+scikit-learn
 seaborn
 matplotlib
-pathlib
